<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scenario1.uidesign.activities.UIDesignActivity"
    android:weightSum="1.0"
    android:orientation="vertical">
<android.support.design.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/zero_height"
    android:id="@+id/coord_layout"
    android:layout_weight="0.10"
    android:layout_gravity="center_vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tabMode="scrollable"
            app:tabGravity="fill"
            app:tabMaxWidth="@dimen/tab_max_width"/>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_height"
        android:id="@+id/pagerLayout"
        android:layout_below="@id/coord_layout"
        android:layout_weight="0.30"
        android:background="@drawable/layout_bg"
        android:layout_marginTop="@dimen/layout_margin_top_bottom"
        android:layout_marginBottom="@dimen/layout_margin_top_bottom"
        android:layout_marginLeft="@dimen/layout_margin_left_right"
        android:layout_marginRight="@dimen/layout_margin_left_right">
        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/page_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/view_pager"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/pageindicator_margin_bottom"
            android:gravity="center"
            android:orientation="horizontal" >
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/textViewLayout"
        android:layout_below="@id/pagerLayout"
        android:layout_marginTop="@dimen/layout_margin_top_bottom"
        android:layout_marginBottom="@dimen/layout_margin_top_bottom"
        android:layout_marginLeft="@dimen/layout_margin_left_right"
        android:layout_marginRight="@dimen/layout_margin_left_right"
        android:padding="@dimen/textlayout_padding"
        android:layout_weight="0.25"
        android:gravity="center_vertical"
        android:background="@drawable/layout_bg">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="TextView1"
            android:gravity="left|center_vertical"
            style="@style/CodeFont"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:text="TextView2"
            android:layout_centerHorizontal="true"
            android:gravity="center|center_vertical"
            style="@style/CodeFont"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textView2"
            android:text="TextView3"
            android:gravity="right|center_vertical"
            style="@style/CodeFont"/>
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_height"
        android:id="@+id/displayTabItemLayout"
        android:layout_below="@id/textViewLayout"
        android:padding="@dimen/textlayout_padding"
        android:layout_marginTop="@dimen/layout_margin_top_bottom"
        android:layout_marginBottom="@dimen/layout_margin_top_bottom"
        android:layout_marginLeft="@dimen/layout_margin_left_right"
        android:layout_marginRight="@dimen/layout_margin_left_right"
        android:layout_weight="0.10"
        android:gravity="center_vertical"
        android:background="@drawable/layout_bg">
        <TextView
            android:id="@+id/tabItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text=""
            style="@style/CodeFont"
            android:textSize="14sp"/>
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_height"
        android:id="@+id/buttonLayout"
        android:layout_below="@id/displayTabItemLayout"
        android:padding="@dimen/textlayout_padding"
        android:layout_marginTop="@dimen/layout_margin_top_bottom"
        android:layout_marginBottom="@dimen/layout_margin_top_bottom"
        android:layout_marginLeft="@dimen/layout_margin_left_right"
        android:layout_marginRight="@dimen/layout_margin_left_right"
        android:gravity="center_vertical"
        android:layout_weight="0.25"
        android:background="@drawable/layout_bg">
        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:id="@+id/btn1"
            android:text="@string/red_btn_text"
            android:layout_alignParentLeft="true"
            android:onClick="buttonOnClick"
            style="@style/CodeFont"
            android:focusable="true" />
        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:id="@+id/btn2"
            android:text="@string/blue_btn_text"
            android:layout_centerHorizontal="true"
            android:onClick="buttonOnClick"
            style="@style/CodeFont"/>
        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:id="@+id/btn3"
            android:text="@string/green_btn_text"
            android:layout_alignParentRight="true"
            android:onClick="buttonOnClick"
            style="@style/CodeFont"/>
        </RelativeLayout>


</LinearLayout>